# aruco_marker_robot

./: CMakeLists.txt  README.md  package.xml
config/: bridge_parameters.yaml
launch/: aruco_world.launch.py  diff_aruco_world.launch.py  empty_world.launch.py
rviz/: visualize.rviz
src/: aruco_marker_processor.cpp
urdf/: diff_marker_follower_robot.gazebo  diff_marker_follower_robot.urdf  marker_follower_robot.gazebo  marker_follower_robot.urdf
worlds/: marker_world.sdf
